--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>JavaScript Coding Challenge #11</h1>
     <script src="cc_11.js"></script>
 </body>
 </html>
